// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentEvent is rendered 1`] = `
<figure
  class="euiCommentEvent euiCommentEvent--regular testClass1 testClass2 css-p4wekm-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
  >
    <span
      class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
    >
      <span
        class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
      >
        someuser
      </span>
      <span
        class="euiCommentEvent__headerEvent"
      />
    </span>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props event is rendered 1`] = `
<figure
  class="euiCommentEvent euiCommentEvent--regular css-p4wekm-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
  >
    <span
      class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
    >
      <span
        class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
      >
        someuser
      </span>
      <span
        class="euiCommentEvent__headerEvent"
      >
        commented
      </span>
    </span>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props timestamp is rendered 1`] = `
<figure
  class="euiCommentEvent euiCommentEvent--regular css-p4wekm-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
  >
    <span
      class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
    >
      <span
        class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
      >
        someuser
      </span>
      <span
        class="euiCommentEvent__headerEvent"
      />
      <span
        class="euiCommentEvent__headerTimestamp"
      >
        <time>
          21 days ago
        </time>
      </span>
    </span>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props type custom is rendered 1`] = `
<div
  class="euiCommentEvent euiCommentEvent--custom css-p2ten8-euiCommentEvent-custom"
/>
`;

exports[`EuiCommentEvent props type regular is rendered 1`] = `
<figure
  class="euiCommentEvent euiCommentEvent--regular css-p4wekm-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
  >
    <span
      class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
    >
      <span
        class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
      >
        someuser
      </span>
      <span
        class="euiCommentEvent__headerEvent"
      />
    </span>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props type update is rendered 1`] = `
<div
  class="euiCommentEvent euiCommentEvent--update css-c4ftu2-euiCommentEvent-update-update"
>
  <div
    class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow"
  >
    <div
      class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
    >
      <span
        class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
      >
        <span
          class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
        >
          someuser
        </span>
        <span
          class="euiCommentEvent__headerEvent"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiCommentEvent props updateColor is rendered 1`] = `
<figure
  class="euiCommentEvent euiCommentEvent--regular css-p4wekm-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
  >
    <span
      class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
    >
      <span
        class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
      >
        someuser
      </span>
      <span
        class="euiCommentEvent__headerEvent"
      />
    </span>
  </figcaption>
</figure>
`;

exports[`EuiCommentEvent props updateIcon is rendered 1`] = `
<figure
  class="euiCommentEvent euiCommentEvent--regular css-p4wekm-euiCommentEvent-regular"
>
  <figcaption
    class="euiCommentEvent__header css-1a0qoab-euiCommentEvent__header"
  >
    <span
      class="euiCommentEvent__headerData css-vgd89l-euiCommentEvent__headerData"
    >
      <span
        class="euiCommentEvent__headerUsername css-12gd9rw-euiCommentEvent__headerUsername"
      >
        someuser
      </span>
      <span
        class="euiCommentEvent__headerEvent"
      />
    </span>
  </figcaption>
</figure>
`;
